--- a/package.json
+++ b/package.json
@@ -1,1 +1,14 @@
-
+{
+  "name": "hex-arena",
+  "version": "1.0.0",
+  "description": "Una descripción de tu aplicación",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js"
+  },
+  "dependencies": {
+    "express": "^4.17.1",
+    "socket.io": "^4.1.3"
+    // Agrega cualquier otra dependencia que necesites
+  }
+}
